--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "ngrok": "npx ngrok http 4000 --region jp"
   },
   "keywords": [],
   "author": "",
@@ -20,9 +21,11 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.8.0",
     "http-status-codes": "^2.2.0",
+    "linebot": "^1.6.1",
     "mongoose": "^7.4.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "ngrok": "^5.0.0-beta.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
